--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="/CSS/style.css" />
+    <link rel="stylesheet" href="CSS/style.css" />
   </head>
 
   <body>
