--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="author-hero-right">
             <div class="author-profile-image-wrapper">
               <div class="avatar-blur-frame"></div>
-              <img src="/photo/Image 28 окт. 2025 г., 17_50_23.png" alt="Анна Молчанова"  />
+              <img src="photo/Image 28 окт. 2025 г., 17_50_23.png" alt="Анна Молчанова"  />
               
               </div>
           </div>
