--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="author-hero-stats">
               <div class="author-stat">
                 <div class="author-stat-number">7+</div>
-                <div class="author-stat-label">Лет опыта</div>
+                <div class="author-stat-label">Опыта</div>
               </div>
               <div class="author-stat">
                 <div class="author-stat-number">100+</div>
