--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </p>
             <div class="author-hero-stats">
               <div class="author-stat">
-                <div class="author-stat-number">7+</div>
+                <div class="author-stat-number">7л+</div>
                 <div class="author-stat-label">Опыта</div>
               </div>
               <div class="author-stat">
