--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Анна Молчанова — Финансовый аналитик | SMRT Guides</title>
+    <title>Анна Молчанова — Финансовый аналитик | SmartGuide</title>
     <meta
       name="description"
-      content="Страница Анны Молчановой — финансового аналитика и автора SMRT Guides. Эксперт по инвестициям, криптовалютам и финтеху."
+      content="Страница Анны Молчановой — финансового аналитика и автора SmartGuide. Эксперт по инвестициям, криптовалютам и финтеху."
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
@@ -35,7 +35,7 @@
             </h1>
             <p class="author-hero-subtitle">
               Эксперт по цифровым инвестициям, криптовалютам и финтеху. 
-              Автор аналитических статей на smrtguides.com о современных финансовых инструментах.
+              Автор аналитических статей на SmartGuide о современных финансовых инструментах.
             </p>
             <div class="author-hero-stats">
               <div class="author-stat">
@@ -90,7 +90,7 @@
               помогая инвесторам принимать обоснованные решения.
             </p>
             <p>
-              В своих статьях на <span class="author-highlight">SMRT Guides</span> я раскрываю 
+              В своих статьях на <span class="author-highlight">SmartGuide</span> я раскрываю 
               механизмы работы современных финансовых инструментов и делюсь аналитикой 
               по ключевым тенденциям рынка.
             </p>
@@ -121,7 +121,7 @@
                 Текущая позиция
               </div>
               <div class="author-expertise-desc">
-                Автор и аналитик SMRT Guides
+                Автор и аналитик SmartGuide
               </div>
             </div>
           </div>
